bk_ida/gobmkida/c2/gg_sort
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/utils/gg_utils.c:712:18: error: expected expression
v16 = *( _OWORD *)&v7[v15]; 
                 ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/utils/gg_utils.c:712:10: error: use of undeclared identifier '_OWORD'
v16 = *( _OWORD *)&v7[v15]; 
         ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/utils/gg_utils.c:713:18: error: expected expression
v17 = *( _OWORD *)&v7[v15 + 16]; 
                 ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/utils/gg_utils.c:713:10: error: use of undeclared identifier '_OWORD'
v17 = *( _OWORD *)&v7[v15 + 16]; 
         ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/utils/gg_utils.c:714:18: error: expected expression
v18 = *( _OWORD *)&v8[v15 + 16]; 
                 ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/utils/gg_utils.c:714:10: error: use of undeclared identifier '_OWORD'
v18 = *( _OWORD *)&v8[v15 + 16]; 
         ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/utils/gg_utils.c:715:12: error: expected expression
*( _OWORD *)&v7[v15] = *( _OWORD *)&v8[v15]; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/utils/gg_utils.c:715:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v7[v15] = *( _OWORD *)&v8[v15]; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/utils/gg_utils.c:715:35: error: expected expression
*( _OWORD *)&v7[v15] = *( _OWORD *)&v8[v15]; 
                                  ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/utils/gg_utils.c:715:27: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v7[v15] = *( _OWORD *)&v8[v15]; 
                          ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/utils/gg_utils.c:716:12: error: expected expression
*( _OWORD *)&v7[v15 + 16] = v18; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/utils/gg_utils.c:716:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v7[v15 + 16] = v18; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/utils/gg_utils.c:717:12: error: expected expression
*( _OWORD *)&v8[v15] = v16; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/utils/gg_utils.c:717:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v8[v15] = v16; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/utils/gg_utils.c:718:12: error: expected expression
*( _OWORD *)&v8[v15 + 16] = v17; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/utils/gg_utils.c:718:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v8[v15 + 16] = v17; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/utils/gg_utils.c:719:18: error: expected expression
v19 = *( _OWORD *)&v7[v15 + 32]; 
                 ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/utils/gg_utils.c:719:10: error: use of undeclared identifier '_OWORD'
v19 = *( _OWORD *)&v7[v15 + 32]; 
         ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/utils/gg_utils.c:720:18: error: expected expression
v20 = *( _OWORD *)&v7[v15 + 48]; 
                 ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/utils/gg_utils.c:720:10: error: use of undeclared identifier '_OWORD'
v20 = *( _OWORD *)&v7[v15 + 48]; 
         ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/utils/gg_utils.c:721:18: error: expected expression
v21 = *( _OWORD *)&v8[v15 + 48]; 
                 ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/utils/gg_utils.c:721:10: error: use of undeclared identifier '_OWORD'
v21 = *( _OWORD *)&v8[v15 + 48]; 
         ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/utils/gg_utils.c:722:12: error: expected expression
*( _OWORD *)&v7[v15 + 32] = *( _OWORD *)&v8[v15 + 32]; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/utils/gg_utils.c:722:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v7[v15 + 32] = *( _OWORD *)&v8[v15 + 32]; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/utils/gg_utils.c:722:40: error: expected expression
*( _OWORD *)&v7[v15 + 32] = *( _OWORD *)&v8[v15 + 32]; 
                                       ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/utils/gg_utils.c:722:32: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v7[v15 + 32] = *( _OWORD *)&v8[v15 + 32]; 
                               ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/utils/gg_utils.c:723:12: error: expected expression
*( _OWORD *)&v7[v15 + 48] = v21; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/utils/gg_utils.c:723:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v7[v15 + 48] = v21; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/utils/gg_utils.c:724:12: error: expected expression
*( _OWORD *)&v8[v15 + 32] = v19; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/utils/gg_utils.c:724:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v8[v15 + 32] = v19; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/utils/gg_utils.c:725:12: error: expected expression
*( _OWORD *)&v8[v15 + 48] = v20; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/utils/gg_utils.c:725:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v8[v15 + 48] = v20; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/utils/gg_utils.c:733:18: error: expected expression
v22 = *( _OWORD *)&v7[v15]; 
                 ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/utils/gg_utils.c:733:10: error: use of undeclared identifier '_OWORD'
v22 = *( _OWORD *)&v7[v15]; 
         ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/utils/gg_utils.c:734:18: error: expected expression
v23 = *( _OWORD *)&v7[v15 + 16]; 
                 ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/utils/gg_utils.c:734:10: error: use of undeclared identifier '_OWORD'
v23 = *( _OWORD *)&v7[v15 + 16]; 
         ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/utils/gg_utils.c:735:18: error: expected expression
v24 = *( _OWORD *)&v8[v15 + 16]; 
                 ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/utils/gg_utils.c:735:10: error: use of undeclared identifier '_OWORD'
v24 = *( _OWORD *)&v8[v15 + 16]; 
         ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/utils/gg_utils.c:736:12: error: expected expression
*( _OWORD *)&v7[v15] = *( _OWORD *)&v8[v15]; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/utils/gg_utils.c:736:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v7[v15] = *( _OWORD *)&v8[v15]; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/utils/gg_utils.c:736:35: error: expected expression
*( _OWORD *)&v7[v15] = *( _OWORD *)&v8[v15]; 
                                  ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/utils/gg_utils.c:736:27: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v7[v15] = *( _OWORD *)&v8[v15]; 
                          ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/utils/gg_utils.c:737:12: error: expected expression
*( _OWORD *)&v7[v15 + 16] = v24; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/utils/gg_utils.c:737:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v7[v15 + 16] = v24; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/utils/gg_utils.c:738:12: error: expected expression
*( _OWORD *)&v8[v15] = v22; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/utils/gg_utils.c:738:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v8[v15] = v22; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/utils/gg_utils.c:739:12: error: expected expression
*( _OWORD *)&v8[v15 + 16] = v23; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/utils/gg_utils.c:739:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v8[v15 + 16] = v23; 
   ^
48 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gg_sort/src/obj/5/gg_utils.o] Error 1
